--- a/Intro to RL.ipynb
+++ b/Intro to RL.ipynb
@@ -35,16 +35,15 @@
    "outputs": [],
    "source": [
     "# IMPORTS\n",
-    "import gym\n",
-    "from griddy_env import GriddyEnvOneHot\n",
-    "import numpy as np\n",
-    "import pickle\n",
-    "from copy import deepcopy\n",
     "import time\n",
-    "import random\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "\n",
+    "import gym\n",
+    "from griddy_env import GriddyEnv\n",
     "\n",
     "# SET UP THE ENVIRONMENT\n",
-    "env = GriddyEnvOneHot()    # create the environment"
+    "env = GriddyEnv()    # create the environment"
    ]
   },
   {
@@ -64,6 +63,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Action Space\n",
+    "The action space consists of 4 unique actions: 0, 1, 2, 3<br>\n",
+    "0 - Move left<br>\n",
+    "1 - Move right<br>\n",
+    "2 - Move up<br>\n",
+    "3 - Move down<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observation Space\n",
+    "Has shape (3, 4, 4). Our grid world is 4x4<br>\n",
+    "Each of the 3 channels is a binary mask for the location of different objects within the environment.<br>\n",
+    "Channel 0 - Goal<br>\n",
+    "Channel 1 - Wall<br>\n",
+    "Channel 2 - Agent<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Visualise agent function\n",
+    "def visualise_agent(policy, n=5):\n",
+    "    try:\n",
+    "        for trial_i in range(n):\n",
+    "            observation = env.reset()\n",
+    "            done=False\n",
+    "            t=0\n",
+    "            while not done:\n",
+    "                env.render()\n",
+    "                policy_action = policy(observation)\n",
+    "                observation, reward, done, info = env.step(policy_action)\n",
+    "                time.sleep(0.5)\n",
+    "                t+=1\n",
+    "            env.render()\n",
+    "            time.sleep(1.5)\n",
+    "            print(\"Episode {} finished after {} timesteps\".format(trial_i, t))\n",
+    "        env.close()\n",
+    "    except KeyboardInterrupt:\n",
+    "        env.close()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
@@ -71,47 +121,8 @@
    "source": [
     "# IMPLEMENT A RANDOM POLICY\n",
     "def random_policy(state):\n",
-    "    return random.randint(0, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Episode 0\n",
-      "Episode finished after 17 timesteps.\n",
-      "Episode 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "# WRITE A LOOP FOR THE AGENT TO TRY RANDOM ACTIONS\n",
-    "num_episodes = 3\n",
-    "\n",
-    "try:\n",
-    "    for episode_idx in range(num_episodes):\n",
-    "        print('Episode', episode_idx)\n",
-    "        observation = env.reset()\n",
-    "        done = False\n",
-    "        episode_mem = []\n",
-    "        t = 0\n",
-    "        while not done:\n",
-    "            env.render()\n",
-    "            action = random_policy(observation)\n",
-    "            observation, _, done, info = env.step(action)\n",
-    "            t += 1\n",
-    "            time.sleep(0.1)\n",
-    "        env.render()\n",
-    "        #time.sleep(0.5)\n",
-    "        print(f\"Episode finished after {t + 1} timesteps.\")\n",
-    "    env.close()\n",
-    "except KeyboardInterrupt:\n",
-    "    env.close()"
+    "     action = #fill this in\n",
+    "    return action"
    ]
   },
   {
@@ -182,21 +193,110 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epsilon = 1\n",
+    "i_episode=0\n",
+    "discount_factor=0.8\n",
+    "value_table = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#transition model\n",
+    "def transition(state, action):\n",
+    "    state = np.copy(state)\n",
+    "    agent_pos = list(zip(*np.where(state[2] == 1)))[0]\n",
+    "    new_agent_pos = np.array(agent_pos)\n",
+    "    if action==0:\n",
+    "        new_agent_pos[1]-=1\n",
+    "    elif action==1:\n",
+    "        new_agent_pos[1]+=1\n",
+    "    elif action==2:\n",
+    "        new_agent_pos[0]-=1\n",
+    "    elif action==3:\n",
+    "        new_agent_pos[0]+=1    \n",
+    "    new_agent_pos = np.clip(new_agent_pos, 0, 3)\n",
+    "\n",
+    "    state[2, agent_pos[0], agent_pos[1]] = 0 #moved from this position so it is empty\n",
+    "    \n",
+    "    state[2, new_agent_pos[0], new_agent_pos[1]] = 1 #moved to this position\n",
+    "    return state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#greedy policy\n",
+    "def greedy_policy(state):\n",
+    "    return policy_action"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_value_table(episode_mem, value_table, discount_factor=0.95, learning_rate=0.5):\n",
+    "    return value_table, v_delta # return updated value table and delta in new values"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# INITIALISE THE ENVIRONMENT\n",
-    "### SAME AS PREVIOUS CELL\n",
-    "\n",
-    "# LOOP TO RUN EPISODES TO EXPLORE THE ENVIRONMENT\n",
-    "### SAME AS PREVIOUS CELL\n",
-    "\n",
-    "    # FOR EACH TIMESTEP, SELECT AN ACTION USING OUR RANDOM POLICY\n",
-    "    ### SAME AS PREVIOUS CELL\n",
-    "    \n",
-    "    # FOR EACH EPISODE RUN THE BACKUP ALGORITHM TO UPDATE THE VALUES\n",
-    "    ### IMPLEMENT"
+    "def train(policy, n_episodes=100):\n",
+    "    global epsilon\n",
+    "    global value_table\n",
+    "    global i_episode\n",
+    "    try:\n",
+    "        for _ in range(n_episodes):\n",
+    "            observation = env.reset()\n",
+    "            episode_mem = []\n",
+    "            done=False\n",
+    "            t=0\n",
+    "            while not done:\n",
+    "                env.render()\n",
+    "                time.sleep(0.05)\n",
+    "                action = random_policy(observation, epsilon)\n",
+    "                new_observation, reward, done, info = env.step(action)\n",
+    "                episode_mem.append({'observation':observation,\n",
+    "                                    'action':action,\n",
+    "                                    'reward':reward,\n",
+    "                                    'new_observation':new_observation,\n",
+    "                                    'done':done})\n",
+    "                observation=new_observation\n",
+    "                t+=1\n",
+    "                epsilon*=0.999\n",
+    "            value_table, v_delta = update_value_table(episode_mem, value_table)\n",
+    "            i_episode+=1\n",
+    "            print(\"Episode {} finished after {} timesteps. Eplislon={}. V_Delta={}\".format(i_episode, t, epsilon, v_delta))\n",
+    "            env.render()\n",
+    "            time.sleep(1)\n",
+    "        env.close()\n",
+    "    except KeyboardInterrupt:\n",
+    "        env.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train()"
    ]
   },
   {
