doing non optimal val first

--- a/Intro to RL.ipynb
+++ b/Intro to RL.ipynb
@@ -209,46 +209,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#transition model\n",
-    "def transition(state, action):\n",
-    "    state = np.copy(state)\n",
-    "    agent_pos = list(zip(*np.where(state[2] == 1)))[0]\n",
-    "    new_agent_pos = np.array(agent_pos)\n",
-    "    if action==0:\n",
-    "        new_agent_pos[1]-=1\n",
-    "    elif action==1:\n",
-    "        new_agent_pos[1]+=1\n",
-    "    elif action==2:\n",
-    "        new_agent_pos[0]-=1\n",
-    "    elif action==3:\n",
-    "        new_agent_pos[0]+=1    \n",
-    "    new_agent_pos = np.clip(new_agent_pos, 0, 3)\n",
+    "def calculate_Gs(episode_mem, discount_factor=0.95):\n",
+    "    for i, mem in reversed(list(enumerate(episode_mem))): #start from terminal state\n",
+    "        if i==len(episode_mem)-1: #if terminal state, G=reward\n",
+    "            episode_mem[i]['G']= mem['reward'] \n",
+    "        else:\n",
+    "            G = mem['reward']+discount_factor*episode_mem[i+1]['G']\n",
+    "            episode_mem[i]['G'] = G \n",
+    "    return episode_mem\n",
     "\n",
-    "    state[2, agent_pos[0], agent_pos[1]] = 0 #moved from this position so it is empty\n",
-    "    \n",
-    "    state[2, new_agent_pos[0], new_agent_pos[1]] = 1 #moved to this position\n",
-    "    return state"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#greedy policy\n",
-    "def greedy_policy(state):\n",
-    "    return policy_action"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def update_value_table(episode_mem, value_table, discount_factor=0.95, learning_rate=0.5):\n",
-    "    return value_table, v_delta # return updated value table and delta in new values"
+    "def update_value_table(value_table, episode_mem, alpha=0.5):\n",
+    "    all_diffs=[]\n",
+    "    for mem in episode_mem:\n",
+    "        key = pickle.dumps(mem['new_observation'])\n",
+    "        if key not in value_table:\n",
+    "            value_table[key]=0 #initialize\n",
+    "        new_val = value_table['key'] + learning_rate*(mem['G']-value_table['key'])\n",
+    "        diff = abs(value_table[key]-new_val)\n",
+    "        all_diffs.append(diff)\n",
+    "        value_table[key] = new_val\n",
+    "    return value_table, np.mean(all_diffs)"
    ]
   },
   {
@@ -280,7 +260,8 @@
     "                observation=new_observation\n",
     "                t+=1\n",
     "                epsilon*=0.999\n",
-    "            value_table, v_delta = update_value_table(episode_mem, value_table)\n",
+    "            episode_mem = calculate_Gs(episode_mem, discount_factor)\n",
+    "            value_table, v_delta = update_value_table(value_table, episode_mem)\n",
     "            i_episode+=1\n",
     "            print(\"Episode {} finished after {} timesteps. Eplislon={}. V_Delta={}\".format(i_episode, t, epsilon, v_delta))\n",
     "            env.render()\n",
@@ -322,7 +303,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### implement greedy policy"
+    "#transition model\n",
+    "def transition(state, action):\n",
+    "    state = np.copy(state)\n",
+    "    agent_pos = list(zip(*np.where(state[2] == 1)))[0]\n",
+    "    new_agent_pos = np.array(agent_pos)\n",
+    "    if action==0:\n",
+    "        new_agent_pos[1]-=1\n",
+    "    elif action==1:\n",
+    "        new_agent_pos[1]+=1\n",
+    "    elif action==2:\n",
+    "        new_agent_pos[0]-=1\n",
+    "    elif action==3:\n",
+    "        new_agent_pos[0]+=1    \n",
+    "    new_agent_pos = np.clip(new_agent_pos, 0, 3)\n",
+    "\n",
+    "    state[2, agent_pos[0], agent_pos[1]] = 0 #moved from this position so it is empty\n",
+    "    \n",
+    "    state[2, new_agent_pos[0], new_agent_pos[1]] = 1 #moved to this position\n",
+    "    return state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### implement greedy policy\n",
+    "#greedy policy\n",
+    "def greedy_policy(state, return_action_vals=False):\n",
+    "    return policy_action"
    ]
   },
   {
