doing non optimal val first

--- a/Intro to RL.ipynb
+++ b/Intro to RL.ipynb
@@ -210,25 +210,10 @@
    "outputs": [],
    "source": [
     "def calculate_Gs(episode_mem, discount_factor=0.95):\n",
-    "    for i, mem in reversed(list(enumerate(episode_mem))): #start from terminal state\n",
-    "        if i==len(episode_mem)-1: #if terminal state, G=reward\n",
-    "            episode_mem[i]['G']= mem['reward'] \n",
-    "        else:\n",
-    "            G = mem['reward']+discount_factor*episode_mem[i+1]['G']\n",
-    "            episode_mem[i]['G'] = G \n",
     "    return episode_mem\n",
     "\n",
     "def update_value_table(value_table, episode_mem, alpha=0.5):\n",
-    "    all_diffs=[]\n",
-    "    for mem in episode_mem:\n",
-    "        key = pickle.dumps(mem['new_observation'])\n",
-    "        if key not in value_table:\n",
-    "            value_table[key]=0 #initialize\n",
-    "        new_val = value_table['key'] + learning_rate*(mem['G']-value_table['key'])\n",
-    "        diff = abs(value_table[key]-new_val)\n",
-    "        all_diffs.append(diff)\n",
-    "        value_table[key] = new_val\n",
-    "    return value_table, np.mean(all_diffs)"
+    "    return value_table, v_delta"
    ]
   },
   {
