--- a/Intro to RL.ipynb
+++ b/Intro to RL.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,13 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# IMPLEMENT A RANDOM POLICY\n",
     "def random_policy(state):\n",
-    "     action = #fill this in\n",
+    "    #action = #fill this in\n",
+    "    action = np.random.randint(0, 4)\n",
     "    return action"
    ]
   },
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +236,7 @@
     "            while not done:\n",
     "                env.render()\n",
     "                time.sleep(0.05)\n",
-    "                action = random_policy(observation, epsilon)\n",
+    "                action = policy(observation)\n",
     "                new_observation, reward, done, info = env.step(action)\n",
     "                episode_mem.append({'observation':observation,\n",
     "                                    'action':action,\n",
@@ -262,7 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train()"
+    "train(random_policy)"
    ]
   },
   {
@@ -392,7 +393,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# implement value iteration to find optimal value function"
+    "# implement value iteration to find optimal value function\n",
+    "def update_value_table(episode_mem, value_table, discount_factor=0.95, alpha=0.5):\n",
+    "    all_diffs=[]\n",
+    "    for i, mem in reversed(list(enumerate(episode_mem))): #start from terminal state\n",
+    "        if i==len(episode_mem)-1: #if terminal state, G=reward\n",
+    "            calculated_new_v = episode_mem[i]['reward']\n",
+    "        else:\n",
+    "            calculated_new_v = mem['reward']+(discount_factor*np.max(greedy_policy(mem['new_observation'], return_action_vals=True)))\n",
+    "        key = key_from_state(mem['new_observation'])\n",
+    "        diff = abs(value_table[key]-calculated_new_v)\n",
+    "        all_diffs.append(diff)\n",
+    "        value_table[key] =  value_table[key] + alpha*(calculated_new_v-value_table[key])\n",
+    "    return value_table, np.mean(all_diffs)"
    ]
   },
   {
