added solutions code

--- a/Intro to RL.ipynb
+++ b/Intro to RL.ipynb
@@ -317,7 +317,7 @@
    "source": [
     "### implement greedy policy\n",
     "#greedy policy\n",
-    "def greedy_policy(state, return_action_vals=False):\n",
+    "def greedy_policy(state):\n",
     "    return policy_action"
    ]
   },
@@ -350,18 +350,7 @@
     "    if random.random() < epsilon:\n",
     "        return random_policy(state)\n",
     "    else:\n",
-    "        return greedy_policy(state)\n",
-    "\n",
-    "num_episodes = 100\n",
-    "\n",
-    "# INITIALISE THE ENVIRONMENT\n",
-    "### COPY FROM PREVIOUS CODE CELL\n",
-    "\n",
-    "# LOOP TO RUN EPISODES TO EXPLORE THE ENVIRONMENT\n",
-    "### COPY FROM PREVIOUS CODE CELL\n",
-    "\n",
-    "    # FOR EACH TIMESTEP, SELECT AN ACTION USING OUR EPSILON-GREEDY POLICY\n",
-    "    ### IMPLEMENT"
+    "        return greedy_policy(state)"
    ]
   },
   {
@@ -394,6 +383,50 @@
    "source": [
     "# implement value iteration to find optimal value function\n",
     "def update_value_table(episode_mem, value_table, discount_factor=0.95, alpha=0.5):\n",
+    "    return value_table, v_delta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Final Code solution with visualisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "\n",
+    "import gym\n",
+    "from griddy_env import GriddyEnv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def key_from_state(state):\n",
+    "    key = pickle.dumps(state)\n",
+    "    if key not in value_table:\n",
+    "        value_table[key]=0 #initialize\n",
+    "    return key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_value_table(episode_mem, value_table, discount_factor=0.95, learning_rate=0.1):\n",
     "    all_diffs=[]\n",
     "    for i, mem in reversed(list(enumerate(episode_mem))): #start from terminal state\n",
     "        if i==len(episode_mem)-1: #if terminal state, G=reward\n",
@@ -403,33 +436,226 @@
     "        key = key_from_state(mem['new_observation'])\n",
     "        diff = abs(value_table[key]-calculated_new_v)\n",
     "        all_diffs.append(diff)\n",
-    "        value_table[key] =  value_table[key] + alpha*(calculated_new_v-value_table[key])\n",
+    "        value_table[key] =  value_table[key] + learning_rate*(calculated_new_v-value_table[key])\n",
     "    return value_table, np.mean(all_diffs)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## What if we don't have a model?\n",
+    "#This is the transition model aka our model of the environment. Given state and action it predicts next state\n",
+    "def transition(state, action):\n",
+    "    state = np.copy(state)\n",
+    "    agent_pos = list(zip(*np.where(state[2] == 1)))[0]\n",
+    "    new_agent_pos = np.array(agent_pos)\n",
+    "    if action==0:\n",
+    "        new_agent_pos[1]-=1\n",
+    "    elif action==1:\n",
+    "        new_agent_pos[1]+=1\n",
+    "    elif action==2:\n",
+    "        new_agent_pos[0]-=1\n",
+    "    elif action==3:\n",
+    "        new_agent_pos[0]+=1    \n",
+    "    new_agent_pos = np.clip(new_agent_pos, 0, 3)\n",
     "\n",
-    "Without a model that tells our agent what states it can reach next, it can't look ahead. Not even one step. So the agent won't be able to use value iteration to find an optimal policy. \n",
-    "\n",
-    "### We cant find out \"how good each state is\" without a model\n",
-    "However, if we can find out \"how good each action in each state is\" without a model. A function that predicts this is called the **state-action value function**:\n",
-    "\n",
-    "![](./images/q_def.png)\n",
-    "\n",
-    "![](./images/bellman_op_q.png)\n",
-    "\n",
-    "![](./images/backup_q.png)\n",
-    "\n",
-    "![](./images/update_rule_q.png)\n",
-    "\n",
-    "How big is the input space to the state value function V?\n",
-    "\n",
-    "How much bigger is the input space to the state-action value function Q?\n",
-    "\n"
+    "    state[2, agent_pos[0], agent_pos[1]] = 0 #moved from this position so it is empty\n",
+    "    state[2, new_agent_pos[0], new_agent_pos[1]] = 1 #moved to this position\n",
+    "    return state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greedy_policy(state, return_action_vals=False):\n",
+    "    action_values=[]\n",
+    "    for test_action in range(4): #for each action\n",
+    "        new_state = transition(state, test_action)\n",
+    "        key = key_from_state(new_state)\n",
+    "        action_values.append(value_table[key])\n",
+    "    policy_action = np.argmax(action_values)\n",
+    "    if return_action_vals: return action_values\n",
+    "    return policy_action"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def epsilon_greedy_policy(state):\n",
+    "    action = env.action_space.sample() if np.random.rand()<epsilon else greedy_policy(state)\n",
+    "    return action"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def random_policy(state):\n",
+    "    return np.random.randint(0, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def value_table_viz(value_table):\n",
+    "    values = np.zeros((4, 4))\n",
+    "    base_st = np.zeros((3, 4, 4), dtype=np.int64)\n",
+    "    base_st[0, 3, 3]=1\n",
+    "    for i in range(4):\n",
+    "        for j in range(4):\n",
+    "            test_st = np.copy(base_st)\n",
+    "            test_st[2, i, j] = 1\n",
+    "            key = pickle.dumps(test_st)\n",
+    "            if key in value_table:\n",
+    "                val = value_table[key]\n",
+    "            else:\n",
+    "                val=0\n",
+    "            values[i, j] = val\n",
+    "    return values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualise_agent(policy, value_table=None, n=5):\n",
+    "    try:\n",
+    "        for trial_i in range(n):\n",
+    "            observation = env.reset()\n",
+    "            done=False\n",
+    "            t=0\n",
+    "            while not done:\n",
+    "                if value_table: env.render(value_table_viz(value_table))\n",
+    "                else: env.render()\n",
+    "                policy_action = policy(observation)\n",
+    "                observation, reward, done, info = env.step(policy_action)\n",
+    "                time.sleep(0.5)\n",
+    "                t+=1\n",
+    "            env.render()\n",
+    "            time.sleep(1.5)\n",
+    "            print(\"Episode {} finished after {} timesteps\".format(trial_i, t))\n",
+    "        env.close()\n",
+    "    except KeyboardInterrupt:\n",
+    "        env.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env = GriddyEnv(4, 4)\n",
+    "epsilon = 1\n",
+    "i_episode=0\n",
+    "discount_factor=0.9\n",
+    "learning_rate=0.3\n",
+    "value_table = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(policy, n_episodes=100):\n",
+    "    global epsilon\n",
+    "    global value_table\n",
+    "    global i_episode\n",
+    "    try:\n",
+    "        for _ in range(n_episodes):\n",
+    "            observation = env.reset()\n",
+    "            episode_mem = []\n",
+    "            done=False\n",
+    "            t=0\n",
+    "            while not done:\n",
+    "                env.render()\n",
+    "                time.sleep(0.05)\n",
+    "                action = policy(observation)\n",
+    "                new_observation, reward, done, info = env.step(action)\n",
+    "                episode_mem.append({'observation':observation,\n",
+    "                                    'action':action,\n",
+    "                                    'reward':reward,\n",
+    "                                    'new_observation':new_observation,\n",
+    "                                    'done':done})\n",
+    "                observation=new_observation\n",
+    "                t+=1\n",
+    "                epsilon*=0.999\n",
+    "            value_table, v_delta = update_value_table(episode_mem, value_table, discount_factor, learning_rate)\n",
+    "            i_episode+=1\n",
+    "            print(\"Episode {} finished after {} timesteps. Eplislon={}. V_Delta={}\".format(i_episode, t, epsilon, v_delta))#, end='\\r')\n",
+    "            #print(value_table_viz(value_table))\n",
+    "            #print()\n",
+    "            env.render(value_table_viz(value_table))\n",
+    "            time.sleep(2)\n",
+    "        env.close()\n",
+    "    except KeyboardInterrupt:\n",
+    "        env.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train(epsilon_greedy_policy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current estimates of value\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.51701049, 0.57998881, 0.62474069, 0.67338781],\n",
+       "       [0.58888181, 0.6550619 , 0.72840154, 0.80980877],\n",
+       "       [0.65598463, 0.72898751, 0.80999937, 0.8999999 ],\n",
+       "       [0.70749033, 0.80901724, 0.89982683, 0.99999997]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('Current estimates of value')\n",
+    "value_table_viz(value_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualise_agent(greedy_policy, value_table)"
    ]
   },
   {
