added nb to be filled in

--- a/Intro to RL solutions.ipynb
+++ b/Intro to RL solutions.ipynb
@@ -42,7 +42,7 @@
     "from GriddyEnv import GriddyEnv # make sure you: pip3 install GriddyEnv\n",
     "\n",
     "# SET UP THE ENVIRONMENT\n",
-    "env =     # create the environment"
+    "env = GriddyEnv()    # create the environment"
    ]
   },
   {
@@ -142,7 +142,7 @@
    "source": [
     "# IMPLEMENT A RANDOM POLICY\n",
     "def random_policy(state):\n",
-    "    action = \n",
+    "    action = np.random.randint(0, 4)\n",
     "    return action"
    ]
   },
@@ -366,12 +366,21 @@
     "#         value_table[s] = 0\n",
     "    return value_table\n",
     "\n",
+    "# def initialise_policy(num_states=16, num_actions=4):\n",
+    "#     policy = {} # start off with empty map\n",
+    "#     for s in range(num_states):\n",
+    "#         action_probs = np.random.rand((num_actions))\n",
+    "#         action_probs /= sum(action_probs)\n",
+    "#         policy[s] = action_probs\n",
+    "#     return policy\n",
+    "\n",
+    "\n",
     "def initialise_deterministic_policy(num_states=16, num_actions=4):\n",
     "    policy = {} # start off with empty map\n",
     "    for s in range(num_states):\n",
-    "        action_probs = # initialise probabilities randomly\n",
-    "        action_probs /= # normalise probs\n",
-    "        policy[s] =\n",
+    "        action_probs = np.random.rand((num_actions))\n",
+    "        action_probs /= sum(action_probs)\n",
+    "        policy[s] = np.argmax(action_probs) # only line different to above - the function returns the action, rather than the dist over\n",
     "    return policy"
    ]
   },
@@ -391,28 +400,23 @@
     "    while not converged: # until the value function converges\n",
     "        print('sweep ', k)\n",
     "        k += 1 # increment sweep counter\n",
-    "        \n",
     "        worst_delta = 0 # difference between previous values and iterated values\n",
     "        for state in range(num_states): # loop over each state\n",
-    "            action =  # get the action according to current policy\n",
-    "            new_state, reward =  # use model to simulate next state and reward\n",
-    "            new_val =  # compute new value\n",
+    "            action = policy[state] # get the action according to current policy\n",
+    "            new_state, reward = transition(state, action) # use model to simulate next state and reward\n",
+    "            new_val = reward + discount_factor * value_table[new_state] # compute new value\n",
     "#             print(new_val)\n",
     "#             print(value_table[state])\n",
-    "            new_value_table[state] =  # update value table\n",
-    "            delta =  # find the absolute diff between new val and old val for this state\n",
+    "            new_value_table[state] = new_val # update value table\n",
+    "            delta = abs(new_val - value_table[state]) # find the absolute diff between new val and old val for this state\n",
     "#             print('delta:', delta)\n",
-    "\n",
-    "            # CHECK WORST VALUE FUNCTION ERROR\n",
     "            if delta > worst_delta: # is this state the one for which our value table is most wrong?\n",
     "                worst_delta = delta # update worst error for this sweep\n",
     "                print('worst_delta:', worst_delta)\n",
-    "                \n",
-    "        # CHECK CONVERGED\n",
     "        if worst_delta < error_threshold: # once the values stop changing\n",
-    "            converged = # we have found the value function\n",
+    "            converged = True # we have found the value function\n",
     "            print('Converged on value function')\n",
-    "        value_table =  # update value table (took me ages to realise i was missing this line and debug )\n",
+    "        value_table = new_value_table # update value table (took me ages to realise i was missing this line and debug )\n",
     "    return new_value_table # return converged value table evaluated for this policy\n",
     "        "
    ]
@@ -423,30 +427,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# IMPROVE POLICY\n",
     "def policy_improvement(value_table, discount_factor): # set a greedy policy which will always be better than the previous\n",
     "    new_policy = {} # initialise empty new policy to be filled and returned\n",
     "    action_space = range(4) #  \n",
-    "    \n",
-    "    for  # loop over each state\n",
-    "        best_value =  # initialise best value as negative infinity\n",
-    "        best_action =  # no best action found yet\n",
-    "        for : # set the policy as greedy with respect to the value function\n",
-    "            new_state, reward = # use model to simulate next state and reward\n",
-    "            value =  # update value of state\n",
-    "            \n",
-    "            # CHECK MAX VALUE\n",
+    "    for state in value_table.keys(): # loop over each state\n",
+    "        best_value = -float('inf') # initialise best value as negative infinity\n",
+    "        best_action = None # no best action found yet\n",
+    "        for action in action_space: # set the policy as greedy with respect to the value function\n",
+    "            new_state, reward = transition(state, action) # use model to simulate next state and reward\n",
+    "            value = reward + discount_factor * value_table[new_state] # update value of state\n",
     "            if value > best_value: # checking all actions, which gives this state the best value?\n",
     "                best_value = value # update best value\n",
     "                best_action = action # update best action found so far\n",
-    "                \n",
-    "        # SET GREEDY POLICY\n",
-    "        new_policy[state] =  # update new policy to take best action found when it sees this state\n",
+    "        new_policy[state] = best_action # update new policy to take best action found when it sees this state\n",
     "    return new_policy\n",
     "\n",
     "def check_stable_policy(old_policy, new_policy):\n",
     "    stable = True\n",
-    "    # CHECK STABLE POLICY\n",
+    "    for s in range(16):\n",
+    "        old_action = old_policy[s]\n",
+    "        new_action = new_policy[s]\n",
+    "        if new_action != old_action:\n",
+    "            stable = False\n",
     "    return stable"
    ]
   },
@@ -460,26 +464,27 @@
    "source": [
     "# POLICY ITERATION ALGORITHM\n",
     "def policy_iteration(discount_factor=0.9):\n",
-    "    value_table = # initiailise value table\n",
-    "    policy = # initialise deterministic policy\n",
-    "    policy_stable = # initialise false\n",
-    "    policy_idx = 0 # outer to check how many policies we've tried\n",
+    "    value_table = initialise_value_table()\n",
+    "#     policy = initialise_policy()\n",
+    "    policy = initialise_deterministic_policy()\n",
+    "    policy_stable = False\n",
+    "    policy_idx = 0\n",
     "    while not policy_stable: # until convergence\n",
     "        \n",
     "        # POLICY ITERATION\n",
     "        print('Evaluating policy ', policy_idx)\n",
-    "        value_table =  # converge on value function\n",
+    "        value_table = policy_evaluation(policy, value_table, discount_factor) # converge on value function\n",
     "        \n",
     "        # POLICY IMPROVEMENT\n",
     "        print('Iterating policy ', policy_idx)\n",
-    "        new_policy =  # get greedy policy using converged value function\n",
+    "        new_policy = policy_improvement(value_table, discount_factor) # get greedy policy using converged value function\n",
     "        \n",
     "        # CHECK CONVERGENCE\n",
     "        if check_stable_policy(policy, new_policy): # compare policies\n",
     "            policy_stable = True # when they have the same greedy action for each state in the state space\n",
     "            print('Policy now stable - optimal policy found')\n",
     "            \n",
-    "        policy =  # update policy\n",
+    "        policy = new_policy # update policy\n",
     "        \n",
     "    print('Optimal policy:', policy)\n",
     "    return policy\n",
@@ -572,14 +577,14 @@
     "            best_action = None\n",
     "            best_value = -float('inf')\n",
     "            for action in range(num_actions): # max over actions\n",
-    "                new_state, reward = # simulate next state\n",
-    "                new_val = # compute new value\n",
+    "                new_state, reward = transition(state, action)\n",
+    "                new_val = reward + discount_factor * value_table[new_state]\n",
     "                if new_val > best_value:\n",
     "                    best_action = action\n",
     "                    best_value = new_val\n",
     "            \n",
     "            # CHECK ERROR\n",
-    "            delta = # check value change for each state\n",
+    "            delta = abs(best_value - value_table[state])\n",
     "            worst_delta = max(delta, worst_delta)\n",
     "            \n",
     "            new_value_table[state] = best_value # update value table greedily\n",
@@ -589,7 +594,7 @@
     "        # NOTE THAT THERE IS NO POLICY IMPROVEMENT STEP - IT'S DONE IMPLICITLY BY MAXIMISING VALUES OVER ACTIONS\n",
     "        \n",
     "        # CHECK CONVERGENCE\n",
-    "        if worst_delta < : # check if worst delta below threshold\n",
+    "        if worst_delta < error_threshold:\n",
     "            print('Converged')\n",
     "            converged = True\n",
     "    \n",
@@ -600,8 +605,8 @@
     "        best_action = None\n",
     "        best_value = -float('inf')\n",
     "        for action in range(num_actions): # max over actions\n",
-    "            new_state, reward = # \n",
-    "            new_val = # new val\n",
+    "            new_state, reward = transition(state, action)\n",
+    "            new_val = reward + discount_factor * value_table[new_state]\n",
     "            if new_val > best_value:\n",
     "                best_action = action\n",
     "                best_value = new_val\n",
@@ -825,8 +830,12 @@
    "source": [
     "def initialise_action_value_table(num_states=16, num_actions=4):\n",
     "    q_table = {}\n",
-    "    # initialise zero action value table\n",
+    "    for s in range(num_states):\n",
+    "        q_table[s] = {}\n",
+    "        for a in range(num_actions):\n",
+    "            q_table[s][a] = 0\n",
     "    return q_table\n",
+    "\n",
     "\n",
     "def get_state_idx_from_observation(observation):\n",
     "    return np.argmax(observation[2].reshape(1, -1))"
@@ -845,10 +854,12 @@
     "learning_rate=0.3\n",
     "value_table = {}\n",
     "\n",
+    "\n",
+    "\n",
     "def return_optimal_policy_from_q(q_table):\n",
     "    optimal_policy = {}\n",
-    "    for # for each state\n",
-    "        optimal_policy[state] = # rerturn the optimal action\n",
+    "    for state, actions in q_table.items():\n",
+    "        optimal_policy[state] = np.argmax(actions.values())\n",
     "    return optimal_policy\n",
     "\n",
     "def value_table_viz(value_table):\n",
@@ -896,16 +907,16 @@
    "outputs": [],
    "source": [
     "def update_q_table(episode_mem, q_table, discount_factor=0.9, learning_rate=0.1):\n",
-    "    for # do backup\n",
+    "    for idx, mem in reversed(list(enumerate(episode_mem))):\n",
     "        state = get_state_idx_from_observation(mem['observation'])\n",
     "        new_state = get_state_idx_from_observation(mem['new_observation'])\n",
     "        action = mem['action']\n",
     "        if idx == len(episode_mem) - 1: # if terminal state, G=reward\n",
-    "            _return = # get return from final step\n",
+    "            _return = episode_mem[idx]['reward']\n",
     "        else:\n",
-    "            _return = # otherwise compute recursively\n",
-    "        q_table[state][action] =  # take exponential average\n",
-    "        q_table[state][action] = np.round(q_table[state][action], 2) # round to 2 dp\n",
+    "            _return = mem['reward'] + (discount_factor * _return)\n",
+    "        q_table[state][action] =  q_table[state][action] + learning_rate * (_return - q_table[state][action]) # take exponential average\n",
+    "        q_table[state][action] = np.round(q_table[state][action], 2)\n",
     "    return q_table"
    ]
   },
@@ -947,7 +958,7 @@
     "                observation = new_observation\n",
     "                t += 1\n",
     "                \n",
-    "            q_table =  # update q table this is the implicit policy update\n",
+    "            q_table = update_q_table(episode_mem, q_table, discount_factor, learning_rate) # this is the implicit policy update\n",
     "            print(\"Episode {} finished after {} timesteps. Eplsilon={}.\".format(episode_idx, t, epsilon))#, end='\\r')\n",
     "            env.render(value_table_viz(value_table))\n",
     "            print('q table:', q_table)\n",
